<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rviz_birdeye_display</name>
    <version>0.0.1</version>
    <description>RViz plugin for rendering birdview images in the 3D view.</description>
    <maintainer email="lennart.evers@topas.tech">Lennart Evers</maintainer>
    <license>The MIT License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>drives_image_processing_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
